# XBrain

./: .copilotignore  docker-compose.yml
xbrain-desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
xbrain-desktop/src/: App.css  App.tsx  index.css  main.tsx
xbrain-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
xbrain-desktop/src-tauri/src/: main.rs
xbrain-server/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
xbrain-ui/: .dockerignore  Dockerfile  main.py  package-lock.json  package.json  postcss.config.js  tailwind.config.ts
xbrain-ui/scripts/: copy-pdfjs-assets.mjs
xbrain-ui/src/: App.tsx  index.css
xbrain-ui/src/components/pdfviewer/: PdfCanvas.tsx  index.ts
