[package]
name = "xbrain-desktop"
version = "0.1.0"
description = "XBrain Desktop"
authors = ["XBrain Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }
ico = "0.3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.4.1", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
